--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,3 +17,12 @@ jobs:
 
       - run: npm ci
       - run: npm test
+
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=abdelilah-mo_ci-node-devops-app
+            -Dsonar.organization=abdelilah-mo
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
