--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,28 +2,34 @@ name: Node CI
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      - run: npm ci
-      - run: npm test
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
 
       - name: SonarCloud Scan
-  uses: sonarsource/sonarcloud-github-action@v2
-  continue-on-error: true
-  with:
-    args: >
-      -Dsonar.projectKey=abdelilah-mo_ci-node-devops-app
-      -Dsonar.organization=abdelilah-mo
-  env:
-    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        uses: sonarsource/sonarcloud-github-action@v2
+        continue-on-error: true
+        with:
+          args: >
+            -Dsonar.projectKey=abdelilah-mo_ci-node-devops-app
+            -Dsonar.organization=abdelilah-mo
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
